gitops/namespaces/base/default/whoami/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: containous/whoami
        name: whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: whoami
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami-ext
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: networking-ak-outpost-ext-kutara-outpost@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.kutara.io
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - whoami.kutara.io
    secretName: whoami-ext-tls
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami-int
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: networking-ak-outpost-int-rabbito-outpost@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.k8s.rabbito.tech
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - whoami.k8s.rabbito.tech
    secretName: whoami-int-tls
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami-int-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
  - host: whoami-test.nyc1.rabbito.tech
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - whoami-test.nyc1.rabbito.tech
    secretName: whoami-test-int-tls
